# 8-Bit

./: .env  .gitignore  .replit  CONTRIBUTING.md  LICENSE  Procfile  QtKm_Awakened.py  README.md  botSettings.txt  command_list.json  pyproject.toml  requirements.txt  runtime.txt
battleship/: img.py  main.py
cogs/: GameManager.py  connect4.py  connect4_cog.py  main.py  main_cog.py  minecraft.py  rps.py  serverFun.py  tictactoe_cog.py
connect4/: connect4.py  connect4_bitboards.py  connect4ai.c
data/: command_list.json  config.json  prefixes.json
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: QtKm_Awakened.py  wsgi.py
src/bot/: QtKm_Awakened.py  __init__.py
src/bot/cogs/: GameManager.py  connect4_cog.py  main_cog.py  minecraft.py  tictactoe_cog.py
src/bot/data/: command_list.json
src/bot/tictactoe/: tictactoe.py
src/cogs/: connect4_cog.py  main_cog.py  rps.py  tictactoe_cog.py
src/connect4/: connect4.py
src/tictactoe/: cached_boards.json  tictactoe.py
src/tools/: cached_responses.json  constants.py
src/website/: __init__.py  home.html  webserver.py
src/website/templates/: home.html
tictactoe/: cached_boards.json  tictactoe.py
tools/: cached_responses.json  constants.py  imageapi.py
